<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#CBCBCF"

    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:text="@string/game_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#9C27B0"

            android:textSize="41sp" />

        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="0.3"
            android:text="@string/default_player_turn_text"
            android:textColor="@android:color/background_dark"

            android:textSize="22sp" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="0.3"
            android:text="@string/default_player_turn_text2"
            android:textColor="@android:color/background_dark"

            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <Button
                android:id="@+id/res"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:background="#7fa208"
                android:onClick="newGame"
                android:padding="4dp"
                android:text="@string/restart_game_button_text"
                android:textColor="#330033"

                />
            <Button
                android:id="@+id/res"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:background="#7fa208"
                android:onClick="endGame"
                android:padding="4dp"
                android:text="@string/end_game_button_text"
                android:textColor="#330033"

                />


        </LinearLayout>

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="3"

            >

            <Button
                android:id="@+id/a11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp"

                />

            <Button
                android:id="@+id/a12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />

            <Button
                android:id="@+id/a13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />

            <Button
                android:id="@+id/a21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />

            <Button
                android:id="@+id/a22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />

            <Button
                android:id="@+id/a23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />


            <Button
                android:id="@+id/a31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />


            <Button
                android:id="@+id/a32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />

            <Button
                android:id="@+id/a33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#9874a7"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="70sp" />

        </GridLayout>

    </LinearLayout>

</ScrollView>
